# mcp-servers-config

./: .gitignore  README.md  config.json  cursor_settings.json  package-lock.json  package.json  run-supabase.bat
.cursor/rules/: explain-about-code-for-begginer.mdc  github-mcp-server.mdc  kinopii-v5.mdc  knowledge-graph-guide.mdc  mcp.json  memory-bank.mdc  supabase-mcp-server.mdc
.memory-bank/: activeContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.specstory/history/: 2025-03-05_09-56-mcpサーバーのメモリデータ可視化.md  2025-03-08_12-30-cursorでのmcp-installerの使用可否.md
Project_rules/: git-operations-guide.md  knowledge-graph-memory-server.md  supabase-operations-guide.md
Tips/: README.md  cursor-memory-bank-guide.md  knowledge-graph-memory-server.md  mcp-servers-command-backup.md  mcp-servers-overview.md  mcp-servers-setup.md  mcp-servers-temporary-removal.md  memory-setup-guide.md  notion-setup-guide.md  playwright-mcp-server-troubleshooting.md  supabase-mcp-setup-guide.md  todoist-setup-guide.md  trello-integration-summary.md  trello-setup-guide.md
docs/: setup-guide.md  tips.md
mcp-servers/memory-server/: memory-server-usage-guide.md  start-server.sh
memory-server/: config.json  custom-instructions.md  package-lock.json  package.json  run-memory.js
notion-server/: LICENSE  package-lock.json  run-notion.js
notion-server/notion/: package-lock.json  package.json
notion-server/notion/src/: index.ts
playwright-mcp-server/: README.md  config.json  package.json  run-playwright.bat
supabase-server/: .dockerignore  .env.example  .env.test  CHANGELOG.MD  CONTRIBUTING.MD  Dockerfile  LICENSE  README.md  llms-full.txt  pyproject.toml  smithery.yaml
supabase-server/supabase_mcp/: __init__.py  _version.py  exceptions.py  logger.py  main.py  queries.py  settings.py  validators.py
supabase-server/supabase_mcp/api_manager/: api_manager.py  api_safety_config.py  api_spec_manager.py
supabase-server/supabase_mcp/api_manager/specs/: api_spec.json
supabase-server/supabase_mcp/db_client/: db_client.py  db_safety_config.py
supabase-server/supabase_mcp/sdk_client/: auth_admin_models.py  auth_admin_sdk_spec.py  python_client.py
supabase-server/tests/: conftest.py  test_db_client.py  test_main.py  test_settings.py
supabase-server/tests/api_manager/: test_api_manager.py  test_safety_config.py  test_spec_manager.py
supabase-server/tests/sdk_client/: test_auth_admin_models.py  test_python_client.py  test_sdk_client_integration.py
todoist-server/: README.md  run-todoist.js
trello/: .gitignore  Makefile  README.ja.md  README.md  package-lock.json  package.json  run-trello.js  run-trello.mjs  tsconfig.json
trello/src/: index.ts  trello-client.ts  types.ts
